app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.30.0 (9d8dcb518)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
  namespace: noa
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.30.0 (9d8dcb518)
      creationTimestamp: null
      labels:
        io.kompose.network/sp-manifests-my-network: "true"
        io.kompose.service: app
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - env:
            - name: DATABASE_URL
              valueFrom:
                secretKeyRef:
                  name: rds-secret
                  key: DB_CONNECTION_STRING
            - name: REDIS_URL
              value: redis://redis:6379/0
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/meitavi-noad/finalll:latest
          name: statuspage-app
          ports:
            - containerPort: 8000
              hostPort: 8000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
